--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <main>
     <include src="./partials/hero.html"></include>
     <include src="./partials/catalogue.html"></include>
-    <include src="./partials/campari.html"></include>
+    <include src="./partials/modal-ingredients.html"></include>
   </main>
   <include src="./partials/footer.html"></include>
 </body>
