--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,24 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <main>
-      <include src="./partials/hero.html"></include>
-      <include src="./partials/catalogue.html"></include>
-      <include src="./partials/modal-ingredients.html"></include>
+      <!-- Main page -->
+      <div class="main-page">
+        <include src="./partials/hero.html"></include>
+        <include src="./partials/catalogue.html"></include>
+        <include src="./partials/modal-ingredients.html"></include>
+      </div>
+
+      <!-- Second page -->
+      <div class="favorite-cocktails-page hidden-page">
+        <include src="./partials/favorite-cocktails.html"></include>
+        <include src="./partials/modal-ingredients.html"></include>
+      </div>
+
+      <!-- Third page -->
+      <div class="favorite-ingridients-page hidden-page">
+        <include src="./partials/favorite-ingridients.html"></include>
+        <include src="./partials/modal-ingredients.html"></include>
+      </div>
     </main>
     <include src="./partials/footer.html"></include>
   </body>
