--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <script type="module" src="./index.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="icon" href="./images/header/favicon.svg" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;900&family=Roboto:wght@400;700;900&display=swap"
       rel="stylesheet"
@@ -18,6 +19,7 @@
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/header.html"></include>
     <main>
+      <div id="toTop"></div>
       <!-- Main page -->
       <div class="main-page">
         <include src="./partials/hero.html"></include>
