--- a/src/index.html
+++ b/src/index.html
@@ -39,5 +39,20 @@
       </div>
     </main>
     <include src="./partials/footer.html"></include>
+
+    <div
+      style="
+        background-color: blue;
+        position: fixed;
+        bottom: 40px;
+        height: 40px;
+        width: 40px;
+      "
+    ></div>
+    <figure>
+      <audio controls autoplay src="./mp3/disturbed_-_hey_you_(z2.fm).mp3">
+        <a href="./mp3/disturbed_-_hey_you_(z2.fm).mp3"></a>
+      </audio>
+    </figure>
   </body>
 </html>
