--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
       <!-- Third page -->
       <div class="favorite-ingridients-page hidden-page">
         <include src="./partials/favorite-ingridients.html"></include>
-        <include src="./partials/modal-ingredients.html"></include>
+        <!-- <include src="./partials/modal-ingredients.html"></include> -->
       </div>
     </main>
     <include src="./partials/footer.html"></include>
