--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,13 @@
       <div class="main-page">
         <include src="./partials/hero.html"></include>
         <include src="./partials/catalogue.html"></include>
-        <include src="./partials/modal-ingredients.html"></include>
+        <!-- <include src="./partials/modal-ingredients.html"></include> -->
       </div>
 
       <!-- Second page -->
       <div class="favorite-cocktails-page hidden-page">
         <include src="./partials/favorite-cocktails.html"></include>
-        <include src="./partials/modal-ingredients.html"></include>
+        <!-- <include src="./partials/modal-ingredients.html"></include> -->
       </div>
 
       <!-- Third page -->
